--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -24,16 +24,27 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt update
-          sudo apt install -y python3-pip build-essential git openjdk-17-jdk zipalign
+          sudo apt install -y python3-pip build-essential git zip openjdk-17-jdk 
           pip install --upgrade pip setuptools wheel
           pip install kivy kivymd buildozer cython 
 
-      - name: Install Android SDK & Aidl
+      - name: Install Android SDK & Command-Line Tools
         run: |
-          sudo apt install -y android-sdk adb
+          mkdir -p $HOME/android-sdk/cmdline-tools
+          cd $HOME/android-sdk/cmdline-tools
+          wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
+          unzip commandlinetools-linux-*.zip
+          mv cmdline-tools latest
           export ANDROID_HOME=$HOME/android-sdk
-          export PATH=$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH
-          sdkmanager --install "platform-tools" "build-tools;34.0.0" "platforms;android-34" "cmdline-tools;latest"
+          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
+          echo "export ANDROID_HOME=$HOME/android-sdk" >> ~/.bashrc
+          echo "export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH" >> ~/.bashrc
+          source ~/.bashrc
+
+      - name: Install Required Android SDK Components
+        run: |
+          yes | sdkmanager --sdk_root=$ANDROID_HOME --licenses
+          sdkmanager --sdk_root=$ANDROID_HOME --install "platform-tools" "build-tools;34.0.0" "platforms;android-34" "cmdline-tools;latest"
 
       - name: Initialize Buildozer
         run: buildozer init
