Added GitHub Actions for APK build

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -13,8 +13,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 1  
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -24,33 +22,43 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt update
-          sudo apt install -y python3-pip build-essential git zip openjdk-17-jdk 
+          sudo apt install -y python3-pip build-essential git zip openjdk-17-jdk wget unzip
           pip install --upgrade pip setuptools wheel
           pip install kivy kivymd buildozer cython 
 
       - name: Install Android SDK & Command-Line Tools
         run: |
           mkdir -p $HOME/android-sdk/cmdline-tools
-          cd $HOME/android-sdk/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
-          unzip commandlinetools-linux-*.zip
-          mv cmdline-tools latest
+          cd $HOME/android-sdk
+          wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
+          unzip commandlinetools-linux-*.zip -d cmdline-tools
+          mv cmdline-tools/cmdline-tools cmdline-tools/latest
+
           export ANDROID_HOME=$HOME/android-sdk
           export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
-          echo "export ANDROID_HOME=$HOME/android-sdk" >> ~/.bashrc
-          echo "export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH" >> ~/.bashrc
-          source ~/.bashrc
+
+          echo "export ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH" >> $GITHUB_ENV
+
+      - name: Accept Android Licenses
+        run: |
+          source $GITHUB_ENV
+          yes | sdkmanager --licenses || true
 
       - name: Install Required Android SDK Components
         run: |
-          yes | sdkmanager --sdk_root=$ANDROID_HOME --licenses
-          sdkmanager --sdk_root=$ANDROID_HOME --install "platform-tools" "build-tools;34.0.0" "platforms;android-34" "cmdline-tools;latest"
+          source $GITHUB_ENV
+          sdkmanager --install "platform-tools" "build-tools;34.0.0" "platforms;android-34" "cmdline-tools;latest"
 
       - name: Initialize Buildozer
-        run: buildozer init
+        run: |
+          source $GITHUB_ENV
+          buildozer init
 
       - name: Build APK
-        run: buildozer -v android debug
+        run: |
+          source $GITHUB_ENV
+          buildozer -v android debug
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
