--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -45,10 +45,15 @@ jobs:
           source $GITHUB_ENV
           yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses || true
 
-      - name: Install Required Android SDK Components
+      - name: Install Required Android SDK Components (Including AIDL)
         run: |
           source $GITHUB_ENV
-          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "build-tools;34.0.0" "platforms;android-34" "cmdline-tools;latest"
+          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "build-tools;34.0.0" "platforms;android-34" "cmdline-tools;latest" "extras;android;m2repository" "platforms;android-30"
+
+      - name: Verify AIDL Installation
+        run: |
+          source $GITHUB_ENV
+          which aidl || echo "AIDL not found"
 
       - name: Initialize Buildozer
         run: |
