--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -19,50 +19,46 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Dependencies
+      - name: Install System Dependencies
         run: |
           sudo apt update
           sudo apt install -y python3-pip build-essential git zip wget unzip openjdk-17-jdk
-          pip install --upgrade pip setuptools wheel
-          pip install kivy kivymd buildozer cython 
 
-      - name: Install Android SDK & Command-Line Tools
+      - name: Install Python Dependencies
+        run: |
+          pip install --upgrade pip setuptools wheel
+          pip install kivy kivymd buildozer cython
+
+      - name: Set up Android SDK
         run: |
           mkdir -p $HOME/android-sdk/cmdline-tools
           cd $HOME/android-sdk
           wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
           unzip commandlinetools-linux-*.zip -d cmdline-tools
           mv cmdline-tools/cmdline-tools cmdline-tools/latest
-
-      - name: Set Android SDK Environment Variables
-        run: |
           echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
-          echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
-          echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$PATH" >> $GITHUB_ENV
+          echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
 
       - name: Accept Android Licenses
         run: |
-          source $GITHUB_ENV
           yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses || true
 
-      - name: Install Required Android SDK Components (Including AIDL)
+      - name: Install Android SDK Components
         run: |
-          source $GITHUB_ENV
-          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "build-tools;34.0.0" "platforms;android-34" "cmdline-tools;latest" "extras;android;m2repository" "platforms;android-30"
+          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34" "cmdline-tools;latest" "extras;android;m2repository"
 
       - name: Verify AIDL Installation
         run: |
-          source $GITHUB_ENV
+          export PATH=$ANDROID_SDK_ROOT/build-tools/34.0.0:$PATH
           which aidl || echo "AIDL not found"
 
       - name: Initialize Buildozer
         run: |
-          source $GITHUB_ENV
           buildozer init
 
       - name: Build APK
         run: |
-          source $GITHUB_ENV
+          export PATH=$ANDROID_SDK_ROOT/build-tools/34.0.0:$PATH
           buildozer -v android debug
 
       - name: Upload APK Artifact
