--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Install System Dependencies
         run: |
-          sudo apt update
-          sudo apt install -y python3-pip build-essential git zip wget unzip openjdk-17-jdk
+          sudo apt-get update
+          sudo apt-get install -y build-essential libstdc++6 python3-pip git zip wget unzip openjdk-17-jdk
 
       - name: Install Python Dependencies
         run: |
@@ -62,6 +62,8 @@ jobs:
           echo "title = Pokedex" >> buildozer.spec
           echo "package.name = pokedex" >> buildozer.spec
           echo "package.domain = org.example" >> buildozer.spec
+          echo "source.dir = ." >> buildozer.spec  # Add source directory
+          echo "version = 1.0.0" >> buildozer.spec  # Add version
           echo "source.include_exts = py,png,jpg,kv,atlas" >> buildozer.spec
           echo "android.accept_sdk_license = True" >> buildozer.spec
           echo "android.skip_update = False" >> buildozer.spec
