--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -37,7 +37,12 @@ jobs:
           unzip commandlinetools-linux-*.zip -d cmdline-tools
           mv cmdline-tools/cmdline-tools cmdline-tools/latest
           echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME=$HOME/android-sdk/ndk/25b" >> $GITHUB_ENV
           echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
+
+      - name: Install Android NDK
+        run: |
+          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "ndk;25b"
 
       - name: Accept Android Licenses
         run: |
@@ -62,8 +67,9 @@ jobs:
           echo "title = Pokedex" >> buildozer.spec
           echo "package.name = pokedex" >> buildozer.spec
           echo "package.domain = org.example" >> buildozer.spec
-          echo "source.dir = ." >> buildozer.spec  # Add source directory
-          echo "version = 1.0.0" >> buildozer.spec  # Add version
+          echo "source.dir = ." >> buildozer.spec
+          echo "version = 1.0.0" >> buildozer.spec
+          echo "requirements = kivy, kivymd, requests" >> buildozer.spec
           echo "source.include_exts = py,png,jpg,kv,atlas" >> buildozer.spec
           echo "android.accept_sdk_license = True" >> buildozer.spec
           echo "android.skip_update = False" >> buildozer.spec
