Added GitHub Actions for APK build

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -38,7 +38,7 @@ jobs:
           sudo apt-get install -y software-properties-common
           sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu focal main"
           sudo apt-get update
-          sudo apt-get install -y libncurses5 libffi-dev libssl-dev libbz2-dev liblzma-dev zlib1g-dev
+          sudo apt-get install -y -t focal libncurses5 libffi-dev libssl-dev libbz2-dev liblzma-dev zlib1g-dev
 
       # Step 5: Install Python Dependencies
       - name: Install Python Dependencies
