Added GitHub Actions for APK build

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -92,7 +92,7 @@ jobs:
       # Step 10: Clean Buildozer Cache
       - name: Clean Buildozer Cache
         run: |
-          buildozer distclean || { echo "Buildozer distclean failed"; exit 1; }
+          echo y | buildozer distclean || { echo "Buildozer distclean failed"; exit 1; }
 
       # Step 11: Build APK
       - name: Build APK
