--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      # Step 0: Check Disk Space
+      - name: Check Disk Space
+        run: |
+          df -h
+
       # Step 1: Checkout Repository
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -41,7 +46,7 @@ jobs:
       - name: Install Python Dependencies
         run: |
           pip install --upgrade pip setuptools wheel
-          pip install buildozer==1.5.0 python-for-android cython requests
+          pip install buildozer==1.5.0 python-for-android cython requests kivy kivymd || { echo "Python dependency installation failed"; exit 1; }
 
       # Step 6: Set up Android SDK and NDK
       - name: Set up Android SDK and NDK
