--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -46,7 +46,8 @@ jobs:
       - name: Install Python Dependencies
         run: |
           pip install --upgrade pip setuptools wheel
-          pip install buildozer==1.5.0 python-for-android cython requests kivy kivymd || { echo "Python dependency installation failed"; exit 1; }
+          pip install cython==0.29.36 || { echo "Cython installation failed"; exit 1; }
+          pip install buildozer==1.5.0 python-for-android kivy kivymd requests || { echo "Python dependency installation failed"; exit 1; }
 
       # Step 6: Set up Android SDK and NDK
       - name: Set up Android SDK and NDK
